--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,31 @@ jdk:
 
 android:
   components:
-    - build-tools-25.0.0
+    - tools
+    - platform-tools
+    - build-tools-25.0.1
+    - android-25
+    - extra-android-m2repository
+    - extra-android-support
+    - sys-img-armeabi-v7a-android-25
+    - extra-google-google_play_services
+  licenses:
+    - android-sdk-preview-license-52d11cd2
+    - android-sdk-license-c81a61d9
+    - android-sdk-license-.+
+    - google-gdk-license-.+
+before_script:
+  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+before_cache:
+  - "rm -f $HOME/.gradle/caches/modules-2/modules-2.lock"
+before_install:
+  - "chmod +x gradlew"
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+script:
+  - "./gradlew build connectedCheck --stacktrace"
