--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ android:
     - android-25
     - extra-android-m2repository
     - extra-android-support
-    - sys-img-armeabi-v7a-android-25
+    - sys-img-armeabi-v7a-addon-google_apis-google-23
     - extra-google-google_play_services
   licenses:
     - android-sdk-preview-license-52d11cd2
@@ -18,7 +18,7 @@ android:
     - android-sdk-license-.+
     - google-gdk-license-.+
 before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
