--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ android:
     - android-25
     - extra-android-m2repository
     - extra-android-support
-    - sys-img-armeabi-v7a-addon-google_apis-google-23
+    - sys-img-armeabi-v7a-addon-google_apis-google-25
     - extra-google-google_play_services
   licenses:
-    - android-sdk-preview-license-52d11cd2
-    - android-sdk-license-c81a61d9
+    - android-sdk-preview-license-.+
+    - android-sdk-license-.+
     - android-sdk-license-.+
     - google-gdk-license-.+
 before_script:
