--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ android:
     - tools
     - platform-tools
     - build-tools-25.0.1
-    - android-25
+    - android-23
     - extra-android-m2repository
     - extra-android-support
-    - sys-img-armeabi-v7a-addon-google_apis-google-25
+    - sys-img-x86-addon-google_apis-google-25
     - extra-google-google_play_services
   licenses:
     - android-sdk-preview-license-.+
@@ -18,7 +18,7 @@ android:
     - android-sdk-license-.+
     - google-gdk-license-.+
 before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
+  - echo no | android create avd --force -n test -t android-25 --abi google_apis/x86
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
