--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,12 @@ android:
     - android-25
     - extra-android-m2repository
     - extra-android-support
-    - sys-img-x86-addon-google_apis-google-25
-    - extra-google-google_play_services
+    - sys-img-x86-android-25
   licenses:
     - android-sdk-preview-license-.+
     - android-sdk-license-.+
-    - android-sdk-license-.+
-    - google-gdk-license-.+
 before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi google_apis/x86
+  - echo no | android create avd --force -n test -t android-25 --abi x86
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
