--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ android:
     - android-sdk-preview-license-.+
     - android-sdk-license-.+
 before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi x86
+  - echo no | android create avd --force -n test -t android-25 --abi default/x86
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
