--- a/ta_sample/src/main/AndroidManifest.xml
+++ b/ta_sample/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
   ~ under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.github.marlonlom.timeago.sample">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.github.marlonlom.timeago.sample">
 
     <application
         android:allowBackup="true"
@@ -24,7 +25,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+
         <activity
             android:name=".ui.MainTabsActivity"
             android:configChanges="orientation"
@@ -36,6 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
