--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@
 
 buildscript {
     ext.kotlin_version = '1.2.60'
+    ext.dokka_version = '0.9.17'
+
     repositories {
         google()
         jcenter()
@@ -26,6 +28,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0-alpha05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -42,3 +45,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
