--- a/build.gradle
+++ b/build.gradle
@@ -18,31 +18,48 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.70'
-    ext.dokka_version = '0.9.17'
-
+    boolean android = project.property('android')
+    String kotlin_version = project.property('kotlin_version')
+    ext.kotlin_version = kotlin_version
     repositories {
-        google()
+        if (android) {
+            google()
+        }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0-beta02'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
+        if (android) {
+            classpath "com.android.tools.build:gradle:${android_gradle_version}"
+        }
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
+        // classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+plugins {
+    id("java")
+    id("org.jetbrains.kotlin.jvm") version "$kotlin_version"
+    id("org.jetbrains.dokka") version "$dokka_version"
+}
+
+boolean android = project.property('android')
+
 allprojects {
     repositories {
-        google()
+        if (android) {
+            google()
+        }
         jcenter()
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+wrapper {
+    version = '6.8.2'
 }
 
+//def clean = tasks.register("clean", type: Delete) {
+//    delete rootProject.buildDir
+//}
