--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,15 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
+
+# use android?
+android=false
+
+kotlin_version=1.4.30
+dokka_version=1.4.10.2
+# android gradle version
+android_gradle_version=4.0.0-beta02
+
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
