--- a/ta_library/build.gradle
+++ b/ta_library/build.gradle
@@ -15,19 +15,30 @@
  * under the License.
  */
 
-apply plugin: 'java'
-apply plugin: "kotlin"
-apply plugin: 'org.jetbrains.dokka'
+// targetCompatibility = '1.6'
+// sourceCompatibility = '1.6'
 
+plugins {
+    id("java")
+    id("org.jetbrains.kotlin.jvm")
+    id("org.jetbrains.dokka")
+}
 
-targetCompatibility = '1.6'
-sourceCompatibility = '1.6'
+dependencies {
+    // implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testImplementation('junit:junit:4.13')
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
-dokka {
-    outputFormat = 'html'
-    outputDirectory = "$buildDir/javadoc"
-    jdkVersion = 6
-    skipDeprecated = false
+    dokkaHtmlPlugin("org.jetbrains.dokka:kotlin-as-java-plugin:$dokka_version")
+}
+
+dokkaHtml.configure {
+    dokkaSourceSets {
+        named("main") {
+            noAndroidSdkLink.set(false)
+        }
+    }
 }
 
 task sourcesJar(type: Jar) {
@@ -37,18 +48,10 @@ task sourcesJar(type: Jar) {
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier 'javadoc'
-    from(dokka)
+    from(dokkaHtml)
 }
 
 artifacts {
     archives sourcesJar
     archives javadocJar
 }
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    testImplementation 'junit:junit:4.13'
-    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-}
-
