--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,9 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 
+mavenProjectGroup=com.github.marlonlom.utilities.timeago
+projectVersion=4.0.4
+
 # use android?
 android=false
 
