--- a/ta_library/build.gradle
+++ b/ta_library/build.gradle
@@ -26,7 +26,7 @@ plugins {
 
 dependencies {
     // implementation fileTree(dir: 'libs', include: ['*.jar'])
-    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testImplementation('junit:junit:4.13')
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
