added publishing and manifest

--- a/ta_library/build.gradle
+++ b/ta_library/build.gradle
@@ -22,6 +22,15 @@ plugins {
     id("java")
     id("org.jetbrains.kotlin.jvm")
     id("org.jetbrains.dokka")
+    id("maven-publish")
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
 
 dependencies {
