--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ plugins {
     id("java-library")
     id("org.jetbrains.kotlin.jvm") version "$kotlin_version"
     id("org.jetbrains.dokka") version "$dokka_version"
+    id("maven-publish")
 }
 
 wrapper {
@@ -53,6 +54,7 @@ boolean android = project.property('android')
 int java_release_version = project.property('java_release_version')
 String mavenProjectGroup = project.property('mavenProjectGroup')
 String projectVersion = project.property('projectVersion')
+
 group = mavenProjectGroup
 version = projectVersion
 
@@ -68,10 +70,35 @@ allprojects {
     group = mavenProjectGroup
     version = projectVersion
 
-    compileJava {
-        options.release = java_release_version
+    tasks.withType(Jar) {
+        manifest {
+            attributes(
+                    "Implementation-Title": project.name,
+                    "Implementation-Version": project.version,
+                    "Automatic-Module-Name": project.group + "." + project.name.replace('_', '.'),
+                    // Custom (non-standard) attribute
+                    "Maven-Group": project.group
+            )
+        }
+        dependsOn("generatePomFileForMavenPublication")
+        into("META-INF/maven/${project.group}/${project.name}") {
+            from("$buildDir/publications/maven/pom-default.xml")
+            rename(".*", "pom.xml")
+        }
     }
 
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+        options.release = java_release_version
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
 
 dependencies {
