--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 
-mavenProjectGroup=com.github.marlonlom.utilities.timeago
+mavenProjectGroup=com.github.marlonlom
 projectVersion=4.0.4
 
 # use android?
