--- a/ta_sample/src/main/AndroidManifest.xml
+++ b/ta_sample/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+
+<!--
   ~ Copyright (c) 2016, marlonlom
   ~
   ~ Licensed under the Apache License, Version 2.0 (the
@@ -14,31 +16,30 @@
   ~ specific language governing permissions and limitations
   ~ under the License.
 -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.github.marlonlom.timeago.sample">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <activity
-            android:name=".ui.MainTabsActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+  <application
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/Theme.Timeago">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+    <activity
+      android:name=".ui.MainTabsActivity"
+      android:exported="true"
+      android:configChanges="orientation"
+      android:screenOrientation="fullSensor"
+      android:theme="@style/Theme.Timeago">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
 
-    </application>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+
+  </application>
 
 </manifest>
